Fixed the vertical alignment of the Embedded Backlinks' file name titles #31

--- a/obsidian.css
+++ b/obsidian.css
@@ -5890,6 +5890,7 @@ h6::selection {
   border-radius: var(--border-radius);
   color: var(--text-muted);
   padding: 5px 5px 5px 25px;
+  align-items: center;
   box-shadow: var(--drop-shadow);
 }
 
