--- a/src/scss/Plugins/Core/backlinks.scss
+++ b/src/scss/Plugins/Core/backlinks.scss
@@ -92,6 +92,7 @@
 	border-radius: var(--border-radius);
 	color: var(--text-muted);
 	padding: 5px 5px 5px 25px;
+	align-items: center;
 	box-shadow: var(--drop-shadow);
 }
 
